--- a/OciDesigns/OciDesignsWeb1/Views/Shared/_Layout.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 @*Place for logo or name of the website*@
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">OCI DESIGNS</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b>OCI DESIGNS</b></a>
                 @*Button will appear when the screen is too small for navbar to show. Act as dropdown box*@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +91,7 @@
 
     <footer class="container-fluid row border-top footer mx-0 px-0">
         <div class="col-3 pl-3">
-            &copy; 2023 - Oci Designs. All rights reserved.  
+            &copy; 2023 - Oci Designs. All rights reserved.
         </div>
         <div class="col pr-5">
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
