Requirement 3: About Page

--- a/OciDesigns/OciDesignsWeb1/Views/Home/About.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Home/About.cshtml
@@ -2,6 +2,34 @@
     ViewData["Title"] = "About";
 }
 
+<!-- Special Elite and Overlock fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Special+Elite&display=swap" rel="stylesheet">
+
+<style>
+    h1 {
+        font-family: 'Overlock', cursive;
+    }
+    img {
+        float: left;
+        width: 100%;
+        max-width: 350px;
+        height: auto;
+    }
+</style>
+
 <body>
-    This is About page.
+    <div class="container">
+        <h1 class="text-center">About Me</h1>
+        <div><img src="/Images/standing menacingly.png" /></div>
+        <div>
+            <p>
+                Heya! Nice to meet you, person on the screen. I'm Oci. The younger me in 2020 and 2021 took Design subject during the last two years of high school and focused on character design. You will find more information related to the conception of each character design's story and such, but overall, both projects were made with a more or less solid story in mind. I'm not used to just design characters based on aesthetic choice or the like, so before I design any character, I try to be inspired to create a story in my mind. Later on, that story will produce its own characters and I will be ready to draw them.
+            </p>
+            <p>Also, huge thanks to Curio Design Limited for this awesome website!</p>
+        </div>
+
+        <p class="text-center">Follow me on social media to keep up with my artistic journey!</p>
+    </div>
 </body>
