--- a/OciDesigns/OciDesignsWeb1/Views/Home/About.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Home/About.cshtml
@@ -8,28 +8,104 @@
 <link href="https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Special+Elite&display=swap" rel="stylesheet">
 
 <style>
+    body {
+        /*background-image: linear-gradient(#246A73, #368F8B, #246A73);*/
+        background-color: #F3DFC1;
+    }
+
     h1 {
         font-family: 'Overlock', cursive;
     }
     img {
-        float: left;
+        float: right;
         width: 100%;
         max-width: 350px;
         height: auto;
+    }
+    i {
+        color: #368F8B;
+    }
+    .btn {
+        background-color: #368F8B;
+        color: white;
+    }
+    .btn:hover {
+        background-color: #160F29;
+        color: white;
     }
 </style>
 
 <body>
     <div class="container">
-        <h1 class="text-center">About Me</h1>
-        <div><img src="/Images/standing menacingly.png" /></div>
-        <div>
-            <p>
-                Heya! Nice to meet you, person on the screen. I'm Oci. The younger me in 2020 and 2021 took Design subject during the last two years of high school and focused on character design. You will find more information related to the conception of each character design's story and such, but overall, both projects were made with a more or less solid story in mind. I'm not used to just design characters based on aesthetic choice or the like, so before I design any character, I try to be inspired to create a story in my mind. Later on, that story will produce its own characters and I will be ready to draw them.
-            </p>
-            <p>Also, huge thanks to Curio Design Limited for this awesome website!</p>
+        <h1 class="text-center pb-3">About Me</h1>
+        <div class="row">
+            <div class="col"><img src="/Images/standing menacingly.png" /></div>
+            <div class="col m-2">
+                <p>
+                    Heya! Nice to meet you, person on the screen. I'm Oci. </p>
+                    <p>The younger me in 2020 and 2021 took Design subject during the last two years of high school and focused on character design. You will find more information related to the conception of each character design's story and such, but overall, both projects were made with a more or less solid story in mind. I'm not used to just design characters based on aesthetic choice or the like, so before I design any character, I try to be inspired to create a story in my mind. Later on, that story will produce its own characters and I will be ready to draw them.
+                </p>
+                <p>Also, huge thanks to Curio Design Limited for this awesome website!</p>
+            </div>
         </div>
 
-        <p class="text-center">Follow me on social media to keep up with my artistic journey!</p>
+        <p class="pt-5 pb-2 text-center">Follow me on social media to keep up with my artistic journey!</p>
+
+        <div class="row justify-content-center">
+            <section class="col offset"></section>
+              <section class="col-1">
+                  <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-3x"></i></a>
+              </section>
+              <section class="col-1">
+                  <a href="https://nz.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+              </section>
+              <section class="col-1">
+                  <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter fa-3x"></i></a>
+              </section>
+              <section class="col offset"></section>
+        </div>
+        
+        <p class="text-center pt-5 pb-2">For any inquiries, you can send an email through the form below.</p>
+
+        <div class="row mx-5">
+            <div class="col offset"></div>
+            <form class="col-8">
+                <!-- Name input -->
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="form4Example1">Name</label>
+                    <input type="text" class="form-control" placeholder="Enter name" name="text">
+                </div>
+
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="form4Example2">Email</label>
+                    <input type="email" class="form-control" placeholder="Enter email" name="email">
+                </div>
+
+                <!-- Subject input -->
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="form4Example5">Subject</label>
+                    <input type="text" class="form-control" placeholder="Enter subject" name="text">
+                </div>
+
+                <!-- Message input -->
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="form4Example3">Your message</label>
+                    <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                </div>
+
+                <!-- Checkbox -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                    <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" />
+                    <label class="form-check-label" for="form4Example4" style="font-weight:normal;">
+                        Send me a copy of this message
+                    </label>
+                </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn mb-4">Send</button>
+            </form>
+            <div class="col offset"></div>
+        </div>
     </div>
 </body>
