--- a/OciDesigns/OciDesignsWeb1/Views/Shared/_Layout.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             font-family: 'Overlock', cursive;
             background-color: #160F29;
             color: #368F8B;
+            font-weight:bold;
         }
         .navbar-brand{
             font-size: 35px;
@@ -49,6 +50,7 @@
             padding-bottom: 10px;
             padding-left: 20px;
             float: right;
+            background-color: transparent;
         }
     </style>
 </head>
