Requirement 1; changing font-weight

--- a/OciDesigns/OciDesignsWeb1/Views/Shared/_Layout.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
         .navbar-brand{
             font-size: 35px;
         }
-        
+        nav {
+            font-weight: bold;
+        }
         nav a, .nav-link {
             text-decoration: none;
             color: #368F8B;
