Requirement 4; changing font

--- a/OciDesigns/OciDesignsWeb1/Views/Home/Year12.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Home/Year12.cshtml
@@ -35,6 +35,9 @@
         text-align:center;
     }
 
+    p, h5 {
+        font-family: 'Inter', sans-serif;
+
     .modal {
         color: black;
     }
