Create syntax error to test Super Linter

--- a/OciDesigns/OciDesignsWeb1/Views/Home/Index.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Home/Index.cshtml
@@ -45,8 +45,8 @@
     }
 </style>
 
-<body>
-    <div class="container text-center>
+<body
+    <div class="container text-center">
         <h1>Welcome to Oci Designs!</h1>
         <p>A website where I showcase my character design projects during Year 12 and Year 13 of high school (or college, as they call it here). Feel free to look around, and I hope you like what you found!</p>
         <br />
@@ -61,7 +61,7 @@
                                 <div class="card-body" style=" font-family: 'Overlock' , cursive;">
                                     <h2 class="card-title">ABOUT</h2>
                                     <h3 class="card-text">Creator information</h3>
-                                </div>
+                            </div>
                         </div>
                     </a>
                 </div>
