--- a/OciDesigns/OciDesignsWeb1/Views/Home/Index.cshtml
+++ b/OciDesigns/OciDesignsWeb1/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
     }
 </style>
 
-<body
+<body>
     <div class="container text-center">
         <h1>Welcome to Oci Designs!</h1>
         <p>A website where I showcase my character design projects during Year 12 and Year 13 of high school (or college, as they call it here). Feel free to look around, and I hope you like what you found!</p>
