Syntax error </style>

--- a/OciDesignsWeb1/Views/Home/Index.cshtml
+++ b/OciDesignsWeb1/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
         -webkit-transform: scale(1.1); /* Safari 3-8 */
         transform: scale(1.1);
     }
-</style>
+</style
 
 <body>
     <div class="container text-center">
