--- a/OciDesignsWeb1/Views/Home/Index.cshtml
+++ b/OciDesignsWeb1/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
 
 <style>
     body {
-        /*background-image: linear-gradient(#246A73, #368F8B, #246A73);*/
-        background-color: #F3DFC1;
-        /*background-color: black;*/
+        background-image: linear-gradient(#246A73, #368F8B, #246A73);
+        /*background-color: #F3DFC1;
+        background-color: black;*/
     }
 
     h1, p {
