--- a/OciDesignsWeb1/Views/Home/Index.cshtml
+++ b/OciDesignsWeb1/Views/Home/Index.cshtml
@@ -15,12 +15,12 @@
 <style>
     body {
         /*background-image: linear-gradient(#246A73, #368F8B, #246A73);*/
-        background-color: #F3DFC1;
-        /*background-color: black;*/
+        /*background-color: #F3DFC1;*/
+        background-color: black;
     }
 
     h1, p {
-        color: black;
+        color: white;
     }
 
     .card {
