--- a/OciDesignsWeb1/Views/Home/Index.cshtml
+++ b/OciDesignsWeb1/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                 <div class="col">
                     <a asp-controller="Home" asp-action="About">
                         <div class="card">
-                            <img class="card-img-top zoom" id="creator-pic" onmouseover="showCreator()" onmouseout="defaultCreator()" src="/Images/Grey_Square.png" />
+                            <img class="card-img-top zoom" id="creator-pic" src="/Images/standing menacingly.png" />
                                 <div class="card-body" style=" font-family: 'Overlock' , cursive;">
                                     <h2 class="card-title">ABOUT</h2>
                                     <h3 class="card-text">Creator information</h3>
