--- a/OciDesignsWeb1/Views/Home/About.cshtml
+++ b/OciDesignsWeb1/Views/Home/About.cshtml
@@ -9,10 +9,8 @@
 
 <style>
     body {
-        /*background-image: linear-gradient(#246A73, #368F8B, #246A73);/*
-        /*background-color: #F3DFC1;*/
-        background-color: black;
-        color: white;
+        /*background-image: linear-gradient(#246A73, #368F8B, #246A73);*/
+        background-color: #F3DFC1;
     }
 
     h1 {
